--- a/</index.html
+++ b/</index.html
@@ -13,96 +13,96 @@
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Cursos na Alura</button>
-                <button class="botao">Criar projetos em Javascript</button>
-                <button class="botao">Criar um portfolio</button>
-                <button class="botao">Atualizar meu currículo</button>
+                <button class="botao ativo">Rodeio</button>
+                <button class="botao">Aniversário</button>
+                <button class="botao">ENEM</button>
+                <button class="botao">Ano Novo</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Rodeio</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias0">7</p>
+                            <p class="contador-digito-numero" id="dias0">5</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas0">7</p>
+                            <p class="contador-digito-numero" id="horas0">21</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min0">7</p>
+                            <p class="contador-digito-numero" id="min0">46</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg0">7</p>
+                            <p class="contador-digito-numero" id="seg0">53</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Aniversário</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias1">7</p>
+                            <p class="contador-digito-numero" id="dias1">16</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas1">7</p>
+                            <p class="contador-digito-numero" id="horas1">16</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min1">7</p>
+                            <p class="contador-digito-numero" id="min1">16</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg1">7</p>
+                            <p class="contador-digito-numero" id="seg1">16</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">ENEM</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias2">7</p>
+                            <p class="contador-digito-numero" id="dias2">53</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas2">7</p>
+                            <p class="contador-digito-numero" id="horas2">1</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min2">7</p>
+                            <p class="contador-digito-numero" id="min2">34</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg2">7</p>
+                            <p class="contador-digito-numero" id="seg2">59</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Ano Novo</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias3">7</p>
+                            <p class="contador-digito-numero" id="dias3">67</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas3">7</p>
+                            <p class="contador-digito-numero" id="horas3">13</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min3">7</p>
+                            <p class="contador-digito-numero" id="min3">39</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg3">7</p>
+                            <p class="contador-digito-numero" id="seg3">2</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
